# Doom-Quake-CG

./: .gitignore  README.md
Doom_Quake/: CMakeLists.txt
Doom_Quake/Doom_Quake/: CMakeLists.txt  Doom_Quake.cpp  Doom_Quake.h
doom/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
doom-quake/: .gitignore  CMakeLists.txt  imgui.ini
doom-quake/include/: Engine.h  Mesh.h  Model.h  glad.h
doom-quake/include/Camera/: Camera.h
doom-quake/include/Culling/: Culling.h
doom-quake/include/Game/: Game.h
doom-quake/include/Hit/: Hit.h
doom-quake/include/Map/: Camera.h  EBO.h  Texture.h  VAO.h  VBO.h  shaderClass.h
doom-quake/include/Map/Terrain/: Terrain.h
doom-quake/include/Model/: BaseModel.h
doom-quake/include/Model/Cross/: CrossModel.h
doom-quake/include/Model/Cube/: CubeModel.h
doom-quake/include/Model/DirectionLight/: DirectionLight.h
doom-quake/include/Model/LearnOpenglModel/: Mesh.h  Model.h
doom-quake/include/Model/LightBox/: LightBox.h
doom-quake/include/Model/Plane/: PlaneModel.h
doom-quake/include/Model/PointLight/: PointLight.h
doom-quake/include/Model/Skybox/: Skybox.h
doom-quake/include/Model/SpotLight/: SpotLight.h
doom-quake/include/Model/Test/: TestModel.cpp  TestModel.h
doom-quake/include/Model/Triangle/: TriangleModel.h
doom-quake/include/Octree/: BoundingBox.h  Node.h  NodeCluster.h  Octants.h  Octree.h
doom-quake/include/Ray/: Ray.h
doom-quake/include/Register/: EBO.h  VAO.h  VBO.h
doom-quake/include/Scenes/: Scene.h  SceneBig.h  SceneOne.h  SceneTwo.h
doom-quake/include/Scenes/SceneOne/: SceneOne.h
doom-quake/include/Scenes/SceneTwo/: SceneTwo.h
doom-quake/include/Shaders/: EShader.h  Shader.h  ShaderType.h  basicShader.h
doom-quake/include/Text/: TextRenderer.h
doom-quake/include/Texture/: ETexture.h  Texture.h
doom-quake/model-files/Humvee_models/: Humvee.c4d
doom-quake/model-files/Plant_Monster_Obj/: Plant_Monster.mtl
doom-quake/model-files/doomSword/: Doom Eternal Weapon.blend  Doom Eternal Weapon.mtl
doom-quake/model-files/hellknight/: Hellknight_LATEST.blend  Hellknight_LATEST.mtl
doom-quake/model-files/mig21/: fishbed.mtl
doom-quake/model-files/plant/: Monster.mtl
doom-quake/model-files/sniper/: sniper.mtl
doom-quake/model-files/spaceship/: spaceship.mtl
doom-quake/model-files/spider/: Only_Spider_with_Animations_Export.mtl
doom-quake/model-files/textures/: imgui.ini
doom-quake/shader-files/: benoit.fs  cross.vs  gpuheight.fs  gpuheight.tes  line.fs  line.vs  modelloading.fs  modelloading.vs  modelloadinglight.fs  multiple_lights.fs  multiple_lights.vs  shader.vs
doom-quake/src/: Mesh.cpp  Model.cpp  ShaderMap.cpp  engine.cpp  main.cpp
doom-quake/src/1.colors/: colors.cpp  shader_m.h
doom-quake/src/Camera/: Camera.cpp
doom-quake/src/Culling/: Culling.cpp
doom-quake/src/Game/: Game.cpp
doom-quake/src/Hit/: Hit.cpp
doom-quake/src/Map/: Camera.cpp  CameraMap.cpp  EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  shaderClass.cpp
doom-quake/src/Map/Terrain/: Terrain.cpp
doom-quake/src/Model/: BaseModel.cpp
doom-quake/src/Model/Cross/: CrossModel.cpp
doom-quake/src/Model/Cube/: CubeModel.cpp
doom-quake/src/Model/DirectionLight/: DirectionLight.cpp
doom-quake/src/Model/LearnOpenglModel/: Mesh.cpp  Model.cpp
doom-quake/src/Model/LightBox/: LightBox.cpp
doom-quake/src/Model/Plane/: PlaneModel.cpp
doom-quake/src/Model/PointLight/: PointLight.cpp
doom-quake/src/Model/Skybox/: Skybox.cpp
doom-quake/src/Model/SpotLight/: SpotLight.cpp
doom-quake/src/Model/Test/: TestModel.cpp
doom-quake/src/Model/Triangle/: TriangleModel.cpp
doom-quake/src/Octree/: Node.cpp  NodeCluster.cpp  Octree.cpp
doom-quake/src/Ray/: Ray.cpp
doom-quake/src/Register/: EBO.cpp  VAO.cpp  VBO.cpp
doom-quake/src/Scenes/: SceneBig.cpp  SceneOne.cpp  SceneTwo.cpp
doom-quake/src/Scenes/SceneOne/: SceneOne.cpp
doom-quake/src/Scenes/SceneTwo/: SceneTwo.cpp
doom-quake/src/Shaders/: Shader.cpp
doom-quake/src/Text/: TextRenderer.cpp
doom-quake/src/Texture/: Texture.cpp
doom-quake/src/glad/: glad.c
doom/glfw-3.3.6/: CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
doom/glfw-3.3.6/src/: Makefile  cmake_install.cmake  glfw3.pc
doom/src/: main.cpp
doom_benoit_test_VS/: CMakeLists.txt
doom_benoit_test_VS/doom_benoit_test_VS/: CMakeLists.txt  doom_benoit_test_VS.cpp  doom_benoit_test_VS.h
